--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Open Playlists</a></li>
-            <li><a href="#">Item 3</a></li>
+            <li><a href="#">Menu</a></li>
         </ul>
     </nav>
     <div>
@@ -23,7 +23,6 @@
          <li>Song 1</li>
          <li>Song 2</li>
          <li>Song 3</li>
-         
      </ul>
      </div>
     <div>
